<resources>
    <string name="app_name">Barbell Math</string>

    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="_1rm">1RM</string>
    <string name="_90">90%</string>
    <string name="of_1rm">of 1RM</string>
    <string name="_80">80%</string>
    <string name="dash">-</string>
    <string name="_50">50%</string>
    <string name="_60">60%</string>
    <string name="_70">70%</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="percent">Percent</string>
    <string name="zero">0</string>

    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>

</resources>