<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".ui.MaxFragment">

    <Button

        android:id="@+id/cacl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color2"
        android:text="@string/calculate"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="5"

        android:gravity="center"
        android:hint="@string/weight"
        android:inputType="phone"
        android:digits="1234567890"
        android:textColor="@color/color3"
        android:textColorHighlight="@color/color3"
        android:textColorLink="@color/color3"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_percent="0.30" />

    <EditText
        android:id="@+id/reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/reps"
        android:inputType="phone"
        android:digits="1234567890"
        android:textColor="@color/color3"
        android:textColorHighlight="@color/color3"
        android:textColorLink="@color/color3"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="30sp"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_percent="0.30" />

    <TextView
        android:id="@+id/oneRepMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center"
        android:text="@string/_1rm"
        android:textColor="@color/color3"
        android:textSize="68sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oneRepMax"
        app:srcCompat="@mipmap/ic_1rm_logo_white_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>